<resources>
    <string name="app_name">BookYourPlace</string>


    <string name="login">Login</string>
    <string name="register_with_email">Register with Email</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register now</string>
    <string name="send_password">Send Password</string>
    <string name="see_results">See results</string>
    <string name="read_more">Read More</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="see_all">See All</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="register_your_hotel">Register your hotel</string>
    <string name="manage_your_hotel">Manage your hotel</string>
    <string name="add_cover_photo">Add cover photo</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_rating">Hotel Rating</string>

    <string name="forgot_password">I forgot the password</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="forgot_password_mensage">No problem! We will send you a link to reset your password. Please enter your email address</string>

    <string name="first">first…</string>
    <string name="and_next">and next…</string>

    <string name="remember">Remember me</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="create_your_account">Create your account</string>

    <string name="hotel_manager">Hotel Manager</string>
    <string name="traveler">Traveler</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>

    <string-array name="Features">
        <item>Restaurant</item>
        <item>Service Room</item>
        <item>Pub</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Breakfast</item>
        <item>24h Reception</item>
        <item>Air conditioner</item>
        <item>Wifi</item>
        <item>Outside Pool</item>
        <item>Inside Pool</item>
        <item>SPA</item>
        <item>Garden</item>
        <item>Gymnasium</item>
        <item>Sauna</item>
    </string-array>

    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="total_rooms">Total Rooms</string>>
    <string name="price_per_night">Price Per Night </string>
    <string name="select_features_of_hotel">Select Features</string>
    <string name="description">Descpription</string>
    <string name="add_other_photos">Add Other Photos</string>
    <string name="register_the_hotel">Register</string>
    <string name="how_is_the_area_around">How is the area around ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_hotels">Your Hotels</string>
    <string name="rating">Rating</string>
    <string name="client_name">Client name</string>
    <string name="revenue_generated">Revenue generated:</string>
    <string name="last_bookings">Last Bookings</string>
    <string name="edit_your_hotel">Edit your hotel!</string>
    <string name="hotels_that_meet_you_search">Hotels that meet you search</string>
    <string name="place_name_found">Place Name found</string>
    <string name="the_weather_is">The Weather Is:</string>
    <string name="cancel_booking">Cancel Booking</string>
</resources>